--- a/Brauhaus/MainWindow.xaml
+++ b/Brauhaus/MainWindow.xaml
@@ -85,14 +85,24 @@
                     <TextBox x:Name="MwSg" TextWrapping="Wrap" Margin="595,60,0,0" FontSize="16" Height="36" PreviewTextInput="NumericPreviewTextInput" VerticalAlignment="Top" d:LayoutOverrides="Height" HorizontalAlignment="Left" Width="127"
                              Text="{Binding SGravity, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" ToolTip="Enter Brix 1.000" TabIndex="3"/>
                     <Label Content="FG" Margin="727,61,0,0" FontSize="16" Height="35" HorizontalContentAlignment="Right" VerticalAlignment="Top" d:LayoutOverrides="Height" HorizontalAlignment="Left" Width="43"/>
-                    <TextBox x:Name="MwFg" TextWrapping="Wrap" Margin="775,60,0,0" FontSize="16" Height="36" VerticalAlignment="Top" d:LayoutOverrides="Height" HorizontalAlignment="Left" Width="127"
+                    <TextBox x:Name="MwFg" TextWrapping="Wrap" Margin="775,60,0,0" FontSize="16" Height="36" PreviewTextInput="NumericPreviewTextInput" VerticalAlignment="Top" d:LayoutOverrides="Height" HorizontalAlignment="Left" Width="127"
                              Text="{Binding FGravity, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" ToolTip="Enter Brix 1.000" TabIndex="5"/>
                     <Label Content="Back-Sweeten:" Margin="658,113,0,0" FontSize="16" Height="35" HorizontalContentAlignment="Right" VerticalAlignment="Top" HorizontalAlignment="Left" Width="112" d:LayoutOverrides="Height"/>
-                    <TextBox x:Name="MwBg" TextWrapping="Wrap" Margin="775,113,0,0" FontSize="16" Height="36" VerticalAlignment="Top" HorizontalAlignment="Left" Width="127" d:LayoutOverrides="Height"
+                    <TextBox x:Name="MwBg" TextWrapping="Wrap" Margin="775,113,0,0" FontSize="16" Height="36" PreviewTextInput="NumericPreviewTextInput" VerticalAlignment="Top" HorizontalAlignment="Left" Width="127" d:LayoutOverrides="Height"
                              Text="{Binding BGravity, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" ToolTip="Enter Brix 1.000" TabIndex="8"/>
-                    <Label Content="Acid %:" Margin="521,12,0,0" FontSize="16" Height="35" HorizontalContentAlignment="Right" VerticalAlignment="Top" HorizontalAlignment="Left" Width="69" d:LayoutOverrides="Height"/>
-                    <TextBox x:Name="MwAcidPct" TextWrapping="Wrap" Margin="595,12,0,0" FontSize="16" Height="36" VerticalAlignment="Top" HorizontalAlignment="Left" Width="127" d:LayoutOverrides="Height"
+
+                    <!-- Additions -->
+                    <Label Content="Acid %" Margin="521,12,0,0" FontSize="16" Height="35" HorizontalContentAlignment="Right" VerticalAlignment="Top" HorizontalAlignment="Left" Width="69" d:LayoutOverrides="Height"/>
+                    <TextBox x:Name="MwAcidPct" TextWrapping="Wrap" Margin="595,12,0,0" FontSize="16" Height="36" PreviewTextInput="NumericPreviewTextInput" VerticalAlignment="Top" HorizontalAlignment="Left" Width="127" d:LayoutOverrides="Height"
                              Text="{Binding AcidPct, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" ToolTip="Enter Whole #" TabIndex="2"/>
+                    <Label Content="Filter Microns:" Margin="264,61,0,0" FontSize="16" Height="35" HorizontalContentAlignment="Right" VerticalAlignment="Top" HorizontalAlignment="Left" Width="108" d:LayoutOverrides="HorizontalAlignment, Height"/>
+                    <TextBox x:Name="MwFilter" TextWrapping="Wrap" Margin="377,60,0,0" FontSize="16" Height="36" PreviewTextInput="NumericPreviewTextInput" VerticalAlignment="Top" HorizontalAlignment="Left" Width="127"
+                        Text="{Binding Filtered, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" ToolTip="Filter Microns" TabIndex="2" d:LayoutOverrides="Height"/>
+                    <Label Content="Brew Size:" Margin="727,12,0,0" FontSize="16" Height="35" HorizontalContentAlignment="Right" VerticalAlignment="Top" HorizontalAlignment="Left" Width="80" d:LayoutOverrides="Height"/>
+                    
+                    <!-- Brew Sizing -->
+                    <TextBox x:Name="MwBrewSize" TextWrapping="Wrap" Margin="807,12,0,0" FontSize="16" Height="36" PreviewTextInput="NumericPreviewTextInput" VerticalAlignment="Top" HorizontalAlignment="Left" Width="95"
+                        Text="{Binding BrewSize, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" ToolTip="Enter Whole #" TabIndex="2" d:LayoutOverrides="Height"/>
                 </Grid>
             </mah:MetroTabItem>
         </TabControl>
